--- a/parte5.html
+++ b/parte5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./par2.css">
-    <link rel="stylesheet" href="./img/Bug.ico">
+    <link rel="stylesheet icon" href="./logos/icone-120-120.png">
     <title>HOUSE PAINT</title>
   </head>
   <body>
@@ -14,6 +14,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+<header>
+  <nav class="navbar navbar-expand-lg blue-light bg-light">
+    <a class="navbar-brand" href="./index.html">House Paint</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+       
+          <li class="nav-item active">
+            <a class="nav-link" href="./part2.html">Sobre Nós <span class="sr-only">(página atual)</span></a>
+            <li class="nav-item active">
+                <a class="nav-link" href="./parte3.html">Nossos Serviços <span class="sr-only">(página atual)</span></a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./parte4.html">Cliente <span class="sr-only">(página atual)</span></a>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="./part7.html">Orçamentos <span class="sr-only">(página atual)</span></a>
+                      <li class="nav-item active">
+                        <a class="nav-link" href="./part8.html">Contatos <span class="sr-only">(página atual)</span></a>
+      </ul>
+      <img src="./logos/logo-113-63.png" alt="">
+      </nav>
 
   <h1>Alguns Comentarios De Outros Clientes</h1>
 
@@ -77,3 +101,4 @@
     <button type="button" class="btn btn-">
         <a href="./parte4.html">Voltar</a>
 </div>
+</header>
