--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           Fundamentos ao Desenvolvimento Web
       </p>
       <button type="button" class="btn btn-">
-        <a href="https://github.com/Bruno198/sate">Download</a>
+        <a href="https://github.com/Bruno198/sate">Download de Arquivos</a>
+      <button type="button" class="btn btn-">
+        <a href="https://github.com/Bruno198/sate">Visualizar Arquivos</a>
     </footer>
   </div>
   
