--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
           Fundamentos ao Desenvolvimento Web
       </p>
       <button type="button" class="btn btn-">
-        <a href="https://github.com/Bruno198/sate">Download de Arquivos</a>
-      <button type="button" class="btn btn-">
-        <a href="https://github.com/Bruno198/sate">Visualizar Arquivos</a>
+        <a href="https://github.com/Bruno198/sate" target="_blank">Visualizar Arquivos</a>
+        <a href="https://mega.nz/file/SowxWaTZ#PhHRoBfMt7MknhdygoVgYlvzO-h-HaXHpgkxlVsnglk" target="_blank">Download de Arquivos</a>
+      
     </footer>
+    
+   
   </div>
   
 </body>
